# LightNote

./: .gitignore  .gitignore.gitignore  Markdown.md  README.md  RNN计算图形化1.drawio  conda环境管理.md  github表情大全.md  jupyter.md  new.md  pycharm快捷键.md  qq机器人.md  test.drawio  一些link.md  常用数学公式.md  文档工具.md  网址.md  随手记.txt
Git/: git设置代理.md  note.md  supp.md  腾讯云使用git.md
deep_learning/: tf.keras.layers.LSTM详解.md  手写数字识别.md  时序预测.md
deeplearing.ai/: sequence_models.md
docker/: Dockerfile  docker.md  docker笔记.md  (+1 more)
python/python backend/flask/bluelog/: .flaskenv  pyproject.toml  wsgi.py
python/python backend/flask/bluelog/bluelog/: __init__.py  extensions.py  fakes.py  forms.py  settings.py  utils.py
python/python backend/flask/bluelog/bluelog/blueprints/: admin.py  auth.py  blog.py
python/python backend/flask/bluelog/bluelog/static/: style.css
python/python backend/flask/bluelog/bluelog/templates/: base.html
python/python backend/flask/bluelog/bluelog/templates/auth/: login copy.html  login.html  test_login.html
python/python backend/flask/bluelog/bluelog/templates/blog/: _pagination.html  _posts.html  _sidebar.html  about.html  category.html  index.html  post.html
python/python backend/flask/bluelog/learning/: 1.学习bluelog的前端.md  一步一步实现bluelog.md
python/python backend/flask/bluelog/learning/1.learn_bluelog_frontend/: 0.html模板.html  manage_post.html  new_post.html
python/python backend/flask/bluelog/learning/1.learn_bluelog_frontend/static/: style.css
python/python backend/flask/bluelog/learning/images/drawio/: bluelog_database.drawio  文章评论表单模板逻辑框架.drawio
(+1416 files in other folders)
