[tool.poetry]
name = "bluelog"
version = "0.1.0"
description = ""
authors = ["light <435786117@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
flask-sqlalchemy = "^3.0.2"
flask-login = "^0.6.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
faker = "^15.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
default = true